--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -28,5 +28,6 @@ $fontSize: 37.5;
   transition: all 0.3s linear;
 }
 .slide-up-enter, .slide-up-leave-to {
-  transform: translate3d(0, 100%, 0);
+  //transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, px2rem(108), 0);
 }
